--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    >
-<TextView
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:text="Hello World, HomeActivity"
-    />
-</LinearLayout>
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             android:layout_width="fill_parent"
+             android:layout_height="fill_parent">
+    <fragment
+            android:name="ch.citux.twitchdroid.ui.fragments.ChannelDetailFragment"
+            android:id="@+id/channelListFragment"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"/>
+</FrameLayout>
 
