--- a/res/layout/channel_detail.xml
+++ b/res/layout/channel_detail.xml
@@ -5,4 +5,20 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
+    <EditText
+            android:id="@+id/txtChannelName"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:inputType="text"
+            android:hint="@string/channel_name"/>
+
+    <Button
+            android:id="@+id/btnStream"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:text="@string/channel_stream"/>
+
 </LinearLayout>
