--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -5,7 +5,7 @@
     <fragment
             android:name="ch.citux.twitchdroid.ui.fragments.ChannelDetailFragment"
             android:id="@+id/channelListFragment"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"/>
 </FrameLayout>
 
