--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -3,7 +3,7 @@
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">
     <fragment
-            android:name="ch.citux.twitchdroid.ui.fragments.ChannelDetailFragment"
+            android:name="ch.citux.twitchdroid.ui.fragments.FavoritesListFragment"
             android:id="@+id/channelListFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
