--- a/res/menu/settings.xml
+++ b/res/menu/settings.xml
@@ -2,8 +2,9 @@
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-            android:id="@+id/menu_settings"
-            android:icon="@drawable/ic_action_settings"
-            android:title="@string/action_settings"
-            android:showAsAction="always"/>
+        android:id="@+id/menu_settings"
+        android:icon="@drawable/ic_action_settings"
+        android:title="@string/action_settings"
+        android:showAsAction="always"
+        android:orderInCategory="20"/>
 </menu>
