--- a/res/layout/channel_detail.xml
+++ b/res/layout/channel_detail.xml
@@ -1,24 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent">
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+    <RelativeLayout
+            android:id="@+id/content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="8dp"
+            android:visibility="gone">
 
-    <EditText
-            android:id="@+id/txtChannelName"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            android:inputType="text"
-            android:hint="@string/channel_name"/>
+        <ImageView
+                android:id="@+id/imgLogo"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:contentDescription="@string/channel_logo"
+                android:src="@drawable/default_channel_logo_medium"/>
 
-    <Button
-            android:id="@+id/btnStream"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:text="@string/channel_stream"/>
+        <TextView
+                android:id="@+id/lblTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                android:layout_toRightOf="@+id/imgLogo"
+                android:layout_alignTop="@+id/imgLogo"
+                android:textSize="24sp"
+                android:textIsSelectable="false"
+                android:singleLine="true"/>
 
-</LinearLayout>
+        <TextView
+                android:id="@+id/lblStatusLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_toRightOf="@+id/imgLogo"
+                android:layout_below="@+id/lblTitle"
+                android:text="@string/channel_status"/>
+
+        <TextView
+                android:id="@+id/lblStatus"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@+id/lblStatusLabel"
+                android:layout_below="@+id/lblTitle"/>
+
+        <Button
+                android:id="@+id/btnStream"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_below="@+id/imgLogo"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentEnd="true"
+                android:text="@string/channel_watch_stream"
+                android:visibility="gone"/>
+
+        <ListView
+                android:id="@android:id/list"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:layout_below="@id/btnStream"/>
+
+    </RelativeLayout>
+
+    <ch.citux.twitchdroid.ui.widget.EmptyView
+            android:id="@+id/empty"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+</FrameLayout>
