--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,11 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="fill_parent"
-             android:layout_height="fill_parent">
-    <fragment
-            android:name="ch.citux.twitchdroid.ui.fragments.FavoritesListFragment"
-            android:id="@+id/channelListFragment"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-</FrameLayout>
-
+             android:id="@+id/content"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"/>
