--- a/res/layout/channel_detail.xml
+++ b/res/layout/channel_detail.xml
@@ -7,13 +7,13 @@
             android:id="@+id/content"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="8dp"
             android:visibility="gone">
 
         <ImageView
                 android:id="@+id/imgLogo"
                 android:layout_width="96dp"
                 android:layout_height="96dp"
+                android:layout_margin="8dp"
                 android:contentDescription="@string/channel_logo"
                 android:src="@drawable/default_channel_logo_medium"/>
 
@@ -49,7 +49,7 @@
                 android:id="@+id/btnStream"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
+                android:layout_margin="8dp"
                 android:layout_below="@+id/imgLogo"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentEnd="true"
@@ -61,8 +61,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/btnStream"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"
+                android:layout_margin="8dp"
                 android:text="@string/channel_archives"
                 android:textSize="16dp"/>
 
@@ -71,7 +70,6 @@
                 android:layout_height="1dp"
                 android:layout_below="@id/lblArchive"
                 android:background="@android:color/darker_gray"/>
-
 
         <ListView
                 android:id="@android:id/list"
