--- a/res/layout/dialog_input.xml
+++ b/res/layout/dialog_input.xml
@@ -8,7 +8,7 @@
             android:id="@+id/txtInput"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:inputType="text"
+            android:inputType="textFilter"
             android:singleLine="true"/>
 
     <ImageView
