--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -108,7 +108,7 @@
         <item name="android:background">@drawable/td_btn_default_holo_light</item>
         <item name="android:minHeight">48dip</item>
         <item name="android:minWidth">64dip</item>
-        <item name="android:textColor">#000000</item>
+        <item name="android:textColor">@android:color/white</item>
     </style>
 
     <style name="ImageButtonTD" parent="android:Widget.ImageButton">
