--- a/src/main/res/xml/preferences.xml
+++ b/src/main/res/xml/preferences.xml
@@ -4,4 +4,11 @@
         android:id="@+id/channel_name"
         android:dialogTitle="Username"
         android:title="Username" />
+    <ListPreference
+        android:id="@+id/stream_quality"
+        android:defaultValue="@string/dialog_stream_quality_default_value"
+        android:dialogTitle="@string/dialog_stream_quality_title"
+        android:entries="@array/dialog_stream_quality_entries"
+        android:entryValues="@array/dialog_stream_quality_entries"
+        android:title="@string/dialog_stream_quality_title" />
 </PreferenceScreen>
