--- a/src/main/res/xml/preferences.xml
+++ b/src/main/res/xml/preferences.xml
@@ -2,8 +2,8 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
     <EditTextPreference
         android:id="@+id/channel_name"
-        android:dialogTitle="Username"
-        android:title="Username" />
+        android:dialogTitle="@string/dialog_username_title"
+        android:title="@string/dialog_username_title" />
     <ListPreference
         android:id="@+id/stream_quality"
         android:defaultValue="@string/dialog_stream_quality_default_value"
