--- a/src/main/res/menu/main.xml
+++ b/src/main/res/menu/main.xml
@@ -1,11 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 
+<!--
+  ~ Copyright 2013-2014 Paul Stöhr
+  ~
+  ~ This file is part of TD.
+  ~
+  ~ TD is free software: you can redistribute it and/or modify
+  ~ it under the terms of the GNU General Public License as published by
+  ~ the Free Software Foundation, either version 3 of the License, or
+  ~ (at your option) any later version.
+  ~
+  ~ This program is distributed in the hope that it will be useful,
+  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
+  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+  ~ GNU General Public License for more details.
+  ~
+  ~ You should have received a copy of the GNU General Public License
+  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
+  -->
+
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+    <!--<item-->
+        <!--android:id="@+id/menu_media_route"-->
+        <!--android:title="@string/action_route"-->
+        <!--android:actionProviderClass="android.support.v7.app.MediaRouteActionProvider"-->
+        <!--android:showAsAction="always" />-->
     <item
-        android:id="@+id/menu_media_route"
-        android:title="@string/action_route"
-        android:actionProviderClass="android.support.v7.app.MediaRouteActionProvider"
-        android:showAsAction="always" />
+        android:id="@+id/menu_search"
+        android:icon="@drawable/ic_action_search"
+        android:actionViewClass="android.support.v7.widget.SearchView"
+        android:title="@string/action_search"
+        android:showAsAction="collapseActionView|always"/>
     <item
         android:id="@+id/menu_refresh"
         android:icon="@drawable/ic_action_refresh"
