--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -1,20 +1,21 @@
-<?xml version="1.0" encoding="utf-8"?><!-- File created by the Android Action Bar Style Generator
-
-     Copyright (C) 2011 The Android Open Source Project
-     Copyright (C) 2012 readyState Software Ltd
-
-     Licensed under the Apache License, Version 2.0 (the "License");
-     you may not use this file except in compliance with the License.
-     You may obtain a copy of the License at
-  
-          http://www.apache.org/licenses/LICENSE-2.0
-  
-     Unless required by applicable law or agreed to in writing, software
-     distributed under the License is distributed on an "AS IS" BASIS,
-     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-     See the License for the specific language governing permissions and
-     limitations under the License.
--->
+<?xml version="1.0" encoding="utf-8"?><!--
+  ~ Copyright 2013-2014 Paul Stöhr
+  ~
+  ~ This file is part of TD.
+  ~
+  ~ TD is free software: you can redistribute it and/or modify
+  ~ it under the terms of the GNU General Public License as published by
+  ~ the Free Software Foundation, either version 3 of the License, or
+  ~ (at your option) any later version.
+  ~
+  ~ This program is distributed in the hope that it will be useful,
+  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
+  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+  ~ GNU General Public License for more details.
+  ~
+  ~ You should have received a copy of the GNU General Public License
+  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
+  -->
 
 <resources>
 
@@ -55,6 +56,7 @@
         <item name="backgroundSplit">@drawable/ab_bottom_solid_td</item>
         <item name="progressBarStyle">@style/ProgressBar.TD</item>
         <item name="logo">@drawable/twitch_logo_white</item>
+        <item name="icon">@drawable/ic_glitchicon_white</item>
         <item name="displayOptions">showHome|useLogo</item>
     </style>
 
@@ -93,6 +95,8 @@
     <style name="Theme.TD.Widget" parent="@style/Theme.AppCompat">
         <item name="popupMenuStyle">@style/PopupMenu.TD</item>
         <item name="dropDownListViewStyle">@style/DropDownListView.TD</item>
+        <item name="searchViewSearchIcon">@drawable/ic_action_search</item>
+        <!--<item name="searchViewCloseIcon">@drawable/ic_action_remove</item>-->
     </style>
 
     <style name="EditTextTD" parent="android:Widget.EditText">
