--- a/src/main/res/drawable/fragment_divider.xml
+++ b/src/main/res/drawable/fragment_divider.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright 2013-2014 Paul Stöhr
   ~
   ~ This file is part of TD.
@@ -17,12 +16,10 @@
   ~ You should have received a copy of the GNU General Public License
   ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
   -->
-
-<resources>
-    <color name="twitch_purple">#6441A5</color>
-    <color name="twitch_grey_dark">#262626</color>
-    <color name="twitch_grey_light">#F1F1F1</color>
-    <color name="status_unknown">#B2B2B2</color>
-    <color name="status_online">#669900</color>
-    <color name="status_offline">#CC0000</color>
-</resources>
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <gradient
+        android:startColor="@color/twitch_grey_light"
+        android:centerColor="@color/twitch_grey_dark"
+        android:endColor="@color/twitch_grey_light"
+        />
+</shape>
