--- a/src/main/res/layout-xlarge/main.xml
+++ b/src/main/res/layout-xlarge/main.xml
@@ -19,21 +19,28 @@
   -->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal"
-    android:baselineAligned="false">
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="horizontal"
+              android:baselineAligned="false">
 
     <FrameLayout
         android:id="@+id/content"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="2" />
+        android:layout_weight="2"/>
+
+    <View
+        android:layout_width="2dp"
+        android:layout_height="match_parent"
+        android:minWidth="2dp"
+        android:background="@drawable/fragment_divider"
+        android:visibility="visible"/>
 
     <FrameLayout
         android:id="@+id/detail"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="3" />
+        android:layout_weight="3"/>
 
 </LinearLayout>
