--- a/src/main/res/layout/action_refresh.xml
+++ b/src/main/res/layout/action_refresh.xml
@@ -19,13 +19,14 @@
   -->
 
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_height="wrap_content"
-    android:layout_width="56dp"
-    android:minWidth="56dp">
+             android:layout_height="wrap_content"
+             android:layout_width="56dp"
+             android:minWidth="56dp">
 
     <ProgressBar
-        style="@style/Holo.ProgressBar.Small"
+        style="@style/Holo.ProgressBar.Large"
         android:layout_width="32dp"
         android:layout_height="32dp"
-        android:layout_gravity="center" />
+        android:layout_gravity="center"/>
+
 </FrameLayout>
