First internal video Playback :) very bad though...

--- a/src/main/res/layout/video.xml
+++ b/src/main/res/layout/video.xml
@@ -20,7 +20,23 @@
 
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
-             android:layout_height="match_parent">
+             android:layout_height="match_parent"
+             android:background="@android:color/black">
+
+    <io.vov.vitamio.widget.CenterLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <io.vov.vitamio.widget.VideoView
+            android:id="@+id/videoView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:visibility="gone"/>
+
+    </io.vov.vitamio.widget.CenterLayout>
 
     <ch.citux.td.ui.widget.EmptyView
         android:id="@android:id/empty"
