--- a/src/main/res/layout/channel_detail.xml
+++ b/src/main/res/layout/channel_detail.xml
@@ -19,8 +19,8 @@
   -->
 
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+             android:layout_width="match_parent"
+             android:layout_height="match_parent">
 
     <RelativeLayout
         android:id="@+id/content"
@@ -34,7 +34,7 @@
             android:layout_height="96dp"
             android:layout_margin="8dp"
             android:contentDescription="@string/channel_logo"
-            android:src="@drawable/default_channel_logo_medium" />
+            android:src="@drawable/default_channel_logo_medium"/>
 
         <TextView
             android:id="@+id/lblTitle"
@@ -45,7 +45,7 @@
             android:layout_alignTop="@+id/imgLogo"
             android:textSize="24sp"
             android:textIsSelectable="false"
-            android:singleLine="true" />
+            android:singleLine="true"/>
 
         <TextView
             android:id="@+id/lblStatusLabel"
@@ -55,14 +55,14 @@
             android:layout_marginRight="8dp"
             android:layout_toRightOf="@+id/imgLogo"
             android:layout_below="@+id/lblTitle"
-            android:text="@string/channel_status" />
+            android:text="@string/channel_status"/>
 
         <TextView
             android:id="@+id/lblStatus"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toRightOf="@+id/lblStatusLabel"
-            android:layout_below="@+id/lblTitle" />
+            android:layout_below="@+id/lblTitle"/>
 
         <Button
             android:id="@+id/btnStream"
@@ -73,7 +73,7 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true"
             android:text="@string/channel_watch_stream"
-            android:visibility="gone" />
+            android:visibility="gone"/>
 
         <TextView
             android:id="@+id/lblArchive"
@@ -82,25 +82,26 @@
             android:layout_below="@id/btnStream"
             android:layout_margin="8dp"
             android:text="@string/channel_archives"
-            android:textSize="16sp" />
+            android:textSize="16sp"/>
 
         <View
             android:layout_width="fill_parent"
             android:layout_height="1dp"
             android:layout_below="@id/lblArchive"
-            android:background="@android:color/darker_gray" />
+            android:background="@android:color/darker_gray"/>
 
         <ListView
             android:id="@android:id/list"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:layout_below="@id/lblArchive" />
+            android:layout_below="@id/lblArchive"/>
+
+        <ch.citux.td.ui.widget.EmptyView
+            android:id="@android:id/empty"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_below="@id/lblArchive"/>
 
     </RelativeLayout>
-
-    <ch.citux.td.ui.widget.EmptyView
-        android:id="@+id/empty"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
 
 </FrameLayout>
