--- a/src/main/res/layout/list_item_videos.xml
+++ b/src/main/res/layout/list_item_videos.xml
@@ -19,40 +19,45 @@
   -->
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:padding="8dp">
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="8dp">
 
     <ImageView
         android:id="@+id/imgThumbnail"
         android:layout_width="64dp"
         android:layout_height="48dp"
         android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:scaleType="center"
-        android:contentDescription="@string/channel_thumbnail" />
+        android:contentDescription="@string/channel_thumbnail"/>
 
     <TextView
         android:id="@+id/lblTitle"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:layout_toEndOf="@id/imgThumbnail"
         android:layout_toRightOf="@id/imgThumbnail"
         android:layout_alignTop="@id/imgThumbnail"
+        android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:singleLine="true"
         android:ellipsize="marquee"
-        android:textSize="16sp" />
+        android:textSize="16sp"/>
 
     <TextView
         android:id="@+id/lblDate"
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
         android:layout_below="@id/lblTitle"
+        android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
+        android:layout_toEndOf="@id/imgThumbnail"
         android:layout_toRightOf="@id/imgThumbnail"
         android:layout_alignBottom="@+id/imgThumbnail"
-        android:gravity="bottom|left"
-        android:textSize="12sp" />
+        android:gravity="bottom|start"
+        android:textSize="12sp"/>
 
     <TextView
         android:id="@+id/lblDuration"
@@ -60,11 +65,13 @@
         android:layout_height="fill_parent"
         android:layout_below="@id/lblTitle"
         android:layout_alignBottom="@+id/imgThumbnail"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
+        android:layout_toEndOf="@id/lblDate"
         android:layout_toRightOf="@id/lblDate"
-        android:gravity="bottom|right"
-        android:textSize="12sp" />
+        android:gravity="bottom|end"
+        android:textSize="12sp"/>
 
 </RelativeLayout>
