--- a/src/main/res/xml/preferences.xml
+++ b/src/main/res/xml/preferences.xml
@@ -34,4 +34,9 @@
         android:id="@+id/internal_player"
         android:defaultValue="false"
         android:title="@string/preference_internal_player"/>
+    <Preference
+        android:id="@+id/license_dialog"
+        android:title="@string/preference_licenses"
+        android:fragment="ch.citux.td.ui.fragments.LicenseDialogFragment">
+    </Preference>
 </PreferenceScreen>
