--- a/src/main/res/xml/preferences.xml
+++ b/src/main/res/xml/preferences.xml
@@ -30,13 +30,12 @@
         android:entries="@array/dialog_stream_quality_entries"
         android:entryValues="@array/dialog_stream_quality_entries"
         android:title="@string/dialog_stream_quality_title"/>
-    <CheckBoxPreference
-        android:id="@+id/internal_player"
-        android:defaultValue="false"
-        android:title="@string/preference_internal_player"/>
+    <!--<CheckBoxPreference-->
+        <!--android:id="@+id/internal_player"-->
+        <!--android:defaultValue="false"-->
+        <!--android:title="@string/preference_internal_player"/>-->
     <Preference
         android:id="@+id/license_dialog"
-        android:title="@string/preference_licenses"
-        android:fragment="ch.citux.td.ui.fragments.LicenseDialogFragment">
+        android:title="@string/preference_licenses">
     </Preference>
 </PreferenceScreen>
