--- a/src/main/res/layout/navigation.xml
+++ b/src/main/res/layout/navigation.xml
@@ -29,6 +29,7 @@
         android:layout_width="fill_parent"
         android:layout_height="88dp"
         android:padding="8dp"
+        android:clickable="true"
         android:visibility="gone"
         android:orientation="horizontal">
 
