Custom color for navigation bar
It makes app appearance even more cool! :smile:

--- a/src/main/res/values-v21/themes_td.xml
+++ b/src/main/res/values-v21/themes_td.xml
@@ -30,6 +30,8 @@
 
     <item name="android:imageButtonStyle">@style/ImageButtonTD</item>
 
+    <item name="android:navigationBarColor">@color/td_color</item>
+
     </style>
 
 </resources>
